add some notes for completion; r.e. review

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -7,7 +7,7 @@
 %storytelling,\\and our story shall be the education of our heroes.}%
 %{\textsc{---plato}\\\textit{Republic}, \textsc{book ii}}
 
-\textcolor{red}{This needs to be redone}
+\note{tk: This needs to be redone}
 
 Over the last ten years, an interesting trend in computing has emerged. General
 purpose CPUs, such as those provided by Intel, IBM and AMD, have increased
