--- a/sections/07-conclusion.tex
+++ b/sections/07-conclusion.tex
@@ -7,27 +7,26 @@
 {\textsc{---david heinemeier hansson}}
 
 \begin{itemize}
-    \item future work
+\item conclusion / summary discussion (2 days)
+
+\item future work
+    \begin{itemize}
+    \item frontend
         \begin{itemize}
-            \item frontend
-                \begin{itemize}
-                    \item fusion cost analysis
-                    \item user controllable fusion
-                    \item used definable rewrite rules
-                \end{itemize}
-            \item backend
-                \begin{itemize}
-                    \item type-preserving code generation
-                \end{itemize}
-            \item language
-                \begin{itemize}
-                    \item first order flattening
-                \end{itemize}
+            \item fusion cost analysis (1 day)
+            \item user controllable fusion (e.g. inline/noinline annotations) (1 day)
+            \item used definable rewrite rules (1 day)
         \end{itemize}
-
-    \item more related work?
-
-    \item conclusions
-
+    \item backend
+        \begin{itemize}
+            \item type-preserving code generation (1 day)
+        \end{itemize}
+    \item language
+        \begin{itemize}
+            \item first order flattening: naturally nested algorithms
+                (barns-hutt) as well as convenience of expression
+                (matrix-vector) (2 days)
+        \end{itemize}
+    \end{itemize}
 \end{itemize}
 
