draft mode: activate!

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
 
-\documentclass[11pt,a4paper,twoside]{book}
+\documentclass[11pt,a4paper,twoside,draft]{book}
 
 % Imports
 % ------------------------------------------------------------------------------
@@ -35,8 +35,8 @@
 % \usepackage{inconsolata}
 % \usepackage{sourcecodepro}
 % \usepackage{lastpage}
-\usepackage{listings}
 \usepackage{longtable}
+\usepackage[final]{listings}
 \usepackage{makeidx}
 \usepackage{marginnote}
 \usepackage{mathtools}
@@ -47,7 +47,7 @@
 \usepackage{rotating}
 \usepackage{setspace}
 % \usepackage{showidx}
-\usepackage[color,draft]{showkeys}
+\usepackage[color]{showkeys}
 \usepackage{subfig}
 \usepackage{titlesec}
 \usepackage[width={autoauto}]{thumbs}
