sec-6: redo smvm table

--- a/preamble.tex
+++ b/preamble.tex
@@ -20,6 +20,8 @@
 \usepackage{a4wide}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{array}
+\usepackage{booktabs}
 \usepackage{calc}
 \usepackage{caption}
 \usepackage[usenames,dvipsnames]{xcolor}
@@ -35,8 +37,8 @@
 % \usepackage{inconsolata}
 % \usepackage{sourcecodepro}
 % \usepackage{lastpage}
-\usepackage{longtable}
 \usepackage[final]{listings}
+% \usepackage{longtable}
 \usepackage{makeidx}
 \usepackage{marginnote}
 \usepackage{mathtools}
@@ -53,6 +55,7 @@
 \usepackage[width={autoauto}]{thumbs}
 \usepackage{upquote}
 \usepackage{xfrac}
+\usepackage{tabu}
 \usepackage{textcomp}
 
 \onehalfspacing
