--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -1599,6 +1599,8 @@ underlying array data.
 \subsection{Exploiting all opportunities for fusion}
 \label{sec:binder_elimination}
 
+\note{tk: update for fixed version of aletD}
+
 As mentioned previously (\S\ref{sec:fusion}), we need to be careful about fusing
 shared array computations to avoid duplicating work. However, \emph{scalar}
 Accelerate computations that manipulate \emph{array shapes}, as opposed to the
