sec-6: smvm discussion

--- a/preamble.tex
+++ b/preamble.tex
@@ -224,7 +224,8 @@
     keywordstyle=[2]\color{Bittersweet},
     keywordstyle=[3]\color{BrickRed},
     keywordstyle=[4]\color{RoyalPurple},
-    keywordstyle=[5]\color{Cyan}
+    keywordstyle=[5]\color{Cyan},
+    escapeinside={(@*}{*@)}
 }
 
 \lstdefinestyle{ptx}{
