don't number sections "x.y.z.w"

--- a/preamble.tex
+++ b/preamble.tex
@@ -119,7 +119,7 @@
 % Extra depth in numbered sections
 % ------------------------------------------------------------------------------
 
-\setcounter{secnumdepth}{3}
+%\setcounter{secnumdepth}{3}
 %\setcounter{tocdepth}{3}
 %\setcounter{lofdepth}{2}
 
